# Aether

./: .gitignore  Procfile  index.html  nixpacks.toml  pyproject.toml  requirements.txt  setup.cfg
docs/: README.md
docs/architecture/: Context_Graph.md  Execution_Graph_Schema.md  Input_Adapter_Interface.md  Plan_Compiler.md  Planner_Interface.md  System_Architecture.md  Universal_Plan_Node.md
src/aether/: cli.py  display.py  server.py
src/aether/adapters/: __init__.py  base.py  document_adapter.py  image_adapter.py  registry.py  text_adapter.py
src/aether/compiler/: __init__.py  plan_compiler.py
src/aether/models/: __init__.py  context_graph.py  execution_graph.py  plan_node.py
src/aether/planner/: __init__.py  planner.py
tests/: test_pipeline.py
