[metadata]
name = aether
version = 0.1.0

[options]
package_dir = = src
packages = find:
python_requires = >=3.9
install_requires =
    anthropic>=0.111.0
    fastapi>=0.111.0
    uvicorn[standard]>=0.29.0
    pydantic>=2.0.0
    python-dotenv>=1.0.0
    rich>=13.0.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    aether = aether.cli:main
    aether-server = aether.server:main
